--- a/parte2/practica_apartado_bagging.Rmd
+++ b/parte2/practica_apartado_bagging.Rmd
@@ -22,6 +22,7 @@ library(randomForest)
 library(keras)
 library(magrittr)
 library(MLmetrics)
+library(tictoc)
 
 # Seleccionamos la semilla aleatoria para todo el cuaderno
 set.seed(12345)
@@ -69,6 +70,7 @@ folds_indexes <- sample(rep(1:n, length.out = nrow(train)))
 folds <- split(train, folds_indexes)
 ```
 
+
 ```{r}
 library(doParallel)
 
@@ -79,14 +81,18 @@ registerDoParallel(cl)
 # Definimos los valores de mtry, ntree y nodesize que vamos a probar
 values.mtry.op <- as.integer(sqrt(ncol(mydf)))
 values.mtry <- c(values.mtry.op - 1, values.mtry.op, values.mtry.op + 1)
-values.ntree <- c(300, 500, 700)
-values.nsizes <- c(1500,2000,2500)
+values.ntree <- c(300, 350,400,450,500,550,600,650, 700)
+values.nsizes <- c(1500,1600,1700,1800,1900,2000,2100,2200,2300,2400,2500)
 
 # Creamos una matriz con todas las combinaciones posibles de los valores de mtry, ntree y nodesize
 v <- expand.grid(values.mtry, values.ntree, values.nsizes)
 
+colnames(v) <- c("mtry", "ntree", "nodesize")
+
 f1.score.fold <- rep(0, length(folds))
 accuracy.fold <- rep(0, length(folds))
+
+inicio <- Sys.time()
 
 # Entrenamos el modelo de bagging en paralelo
 mean_accuracy_sd <- foreach(i = 1:nrow(v), .combine = rbind, .packages = c("randomForest", "MLmetrics")) %dopar% {
@@ -109,8 +115,6 @@ mean_accuracy_sd <- foreach(i = 1:nrow(v), .combine = rbind, .packages = c("rand
     accuracy.fold[k] <- Accuracy(y_pred = yhat.bag, y_true = folds[[k]]$Class)
   }
 
-  print(paste("Se ha probado el vector", i))
-
   # Hacemos la media de los accuracy de todos los pliegues
   mean_f1.score_fold <- mean(f1.score.fold)
   mean_accuracy_fold <- mean(accuracy.fold)
@@ -120,6 +124,10 @@ mean_accuracy_sd <- foreach(i = 1:nrow(v), .combine = rbind, .packages = c("rand
   sd_accuracy_fold <- sd(accuracy.fold)/sqrt(length(folds))
   c(mean_f1.score_fold, sd_f1.score_fold, mean_accuracy_fold, sd_accuracy_fold)
 }
+
+final <- Sys.time()
+
+train_time <- as.numeric(difftime(final, inicio, units = "secs"))
 
 # Stop the cluster
 stopCluster(cl)
@@ -132,10 +140,38 @@ mean_accuracy_sd
 
 
 
-plot(mean_accuracy_sd[,1]/max(mean_accuracy_sd[,1]))
+plot(mean_accuracy_sd[,1]/max(mean_accuracy_sd[,1]), main="F1_Score y Accuracy relativos (Accuracy en rojo)")
 
 points(mean_accuracy_sd[,3]/max(mean_accuracy_sd[,3]),col=2)
 
-plot(mean_accuracy_sd[,3])
+
+plot(mean_accuracy_sd[,1], main="F1_Score absoluto")
+
+plot(mean_accuracy_sd[,3],main="Accuracy absoluto")
+
+
+
+
 ```
+
+```{r}
+write.csv(mean_accuracy_sd, file = "mean_sd.csv")
+
+write.csv(v, file = "vectors.csv",row.names = TRUE)
+
+```
+
+Pasamos el tiempo de segundos a horas, minutos y segundos
+```{r}
+
+horas <- as.integer(train_time %/% 3600)      
+resto <- as.integer(train_time %% 3600)        
+minutos <- as.integer(resto %/% 60)            
+segundos_finales <- as.integer(resto %% 60)        
+
+resultado <- sprintf("El entrenamiento ha tardado %d horas, %d minutos y %2d segundos", horas, minutos, segundos_finales)
+print(resultado)
+
+```
+
 
